; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_cipher_wrap.c_des3_ctx_alloc.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_cipher_wrap.c_des3_ctx_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @des3_ctx_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @des3_ctx_alloc() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = call i64 @mbedtls_calloc(i32 1, i32 1)
  %4 = inttoptr i64 %3 to i8*
  store i8* %4, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = icmp eq i8* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %0
  store i8* null, i8** %1, align 8
  br label %12

8:                                                ; preds = %0
  %9 = load i8*, i8** %2, align 8
  %10 = call i32 @mbedtls_des3_init(i8* %9)
  %11 = load i8*, i8** %2, align 8
  store i8* %11, i8** %1, align 8
  br label %12

12:                                               ; preds = %8, %7
  %13 = load i8*, i8** %1, align 8
  ret i8* %13
}

declare dso_local i64 @mbedtls_calloc(i32, i32) #1

declare dso_local i32 @mbedtls_des3_init(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
